--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mini-password-cracktime-calculator",
+  "name": "mini-password-bruteforce-time-calculator",
   "version": "1.0.0",
   "description": "Calculates an estimated time required to crack a given password",
   "main": "app.js",
@@ -7,9 +7,8 @@
     "test": "node app.js test"
   },
   "author": "Thomas Jirout",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
-    "body-parser": "^1.16.0",
     "express": "^4.14.0",
     "express-handlebars": "^3.0.0"
   }
